--- a/Index.html
+++ b/Index.html
@@ -110,11 +110,11 @@
             "Muss mit Freundin was machen", "Muss zum Arzt Termin", "Mir ist kalt",
             "Muss Schrank aufbauen", "Hab gerade kein Geld", "Bin am Zocken",
             "Meine Eier tun weh", "Ich hab ne Krampfader am Sack", "Das ist mir zu weit",
-            "Ich hab Kopfschmerzen", "Mein Handy ist leer", "Meine Katze hat Geburtstag",
-            "Hab Muskelkater", "Mein Fahrrad ist kaputt", "Hab schon was vor",
+            "Ich hab Kopfschmerzen", "Mein Handy ist leer", "... Hat Geburtstag",
+            "Hab Muskelkater", "Meine Busfahrkarte ist leer", "Hab schon was vor",
             "Bin zu müde", "Mein Internet geht nicht", "Ich muss lernen",
-            "Hab keinen Bock", "Es regnet draußen", "Mein Hund hat Durchfall",
-            "Meine Oma kommt zu Besuch", "Mein Controller ist kaputt", "Ich bin im Urlaub",
+            "Hab keinen Bock", "Es regnet draußen", "Mein Rücken tut weh",
+            "Muss zu meiner Oma", "Garkein bock gerade", "Ich bin im Urlaub",
             "Ich hab vergessen"
         ];
 
