--- a/Index.html
+++ b/Index.html
@@ -114,7 +114,7 @@
             "Hab Muskelkater", "Meine Busfahrkarte ist leer", "Hab schon was vor",
             "Bin zu müde", "Mein Internet geht nicht", "Ich muss lernen",
             "Hab keinen Bock", "Es regnet draußen", "Mein Rücken tut weh",
-            "Muss zu meiner Oma", "Garkein bock gerade", "Ich bin im Urlaub",
+            "Muss zu meiner Oma", "Hase schaden", "Ich bin im Urlaub",
             "Ich hab vergessen"
         ];
 
